Store uppstream link in readme

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+fork of https://git.suckless.org/surf
+
 surf - simple webkit-based browser
 ==================================
 surf is a simple Web browser based on WebKit/GTK+.
